--- a/css/portada.css
+++ b/css/portada.css
@@ -23,13 +23,13 @@ body {
 }
 
 .titulo {
-    font-size: 30px;
+    font-size: 45px;
     font-weight: bold;
     color: #654720;
 }
 
 .subtitulo {
-    font-size: 23px;
+    font-size: 35px;
     color: #a47333;
 }
 
@@ -64,7 +64,7 @@ body {
 .image {
     width: 225px;
     position: absolute;
-    opacity: 50%;
+    opacity: 30%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -93,6 +93,7 @@ body {
     transform: translate(-50%, -50%);
     color: #a47333;
     font-size: 40px;
+    font-weight: bold;
 }
 
 .text2 {
