--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,9 +1,18 @@
-body {
-    background-color: #000;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    width: 100%;
+.container2 {
+    max-width: 600px;
+    margin: auto;
+    background: #fff;
+}
+
+.textoImagen {
+    position: absolute;
+    top: 25%;
+    transform: translate(-22%, -50%);
+    color: white;
+    font-size: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
+    padding: 10px 20px;
+    border-radius: 5px;
 }
 
 video {
