--- a/css/estilos.css
+++ b/css/estilos.css
@@ -115,6 +115,13 @@ body {
     text-transform: uppercase;
 }
 
+.textosub {
+    font-size: 25px;
+    color: #a47333;
+    text-transform: uppercase;
+}
+
+
 .icon {
     font-size: 30px;
 }
