--- a/css/escalas.css
+++ b/css/escalas.css
@@ -11,9 +11,10 @@
 .mapa-btn {
     background-color: #a47333;
     color: white;
-    padding: 8px 16px;
+    padding: 4px 16px;
     border-radius: 8px;
     text-decoration: none;
     display: inline-block;
     margin-top: 10px;
+    text-transform: none;
 }
