--- a/css/estilos.css
+++ b/css/estilos.css
@@ -62,30 +62,30 @@ body {
     width: 225px;
     position: absolute;
     opacity: 30%;
-    top: 55%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .image2 {
-    width: 225px;
+    width: 295px;
     position: absolute;
-    top: 55%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .image3 {
-    width: 285px;
+    width: 325px;
     position: absolute;
-    top: 55%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .central {
     position: absolute;
-    top: 55%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #a47333;
@@ -95,7 +95,7 @@ body {
 
 .plane {
     position: absolute;
-    top: 60%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #a47333;
@@ -112,6 +112,12 @@ body {
 .texto {
     font-size: 20px;
     color: #a47333;
+    text-transform: uppercase;
+}
+
+.textoalt {
+    font-size: 20px;
+    color: #000;
     text-transform: uppercase;
 }
 
