--- a/css/save.css
+++ b/css/save.css
@@ -16,3 +16,17 @@
     left: 55%;
     transform: translate(-50%, -50%);
 }
+
+.popup-gracias {
+    display: none;
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    border-radius: 10px;
+    padding: 30px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    z-index: 9999;
+    text-align: center;
+}
