--- a/css/save.css
+++ b/css/save.css
@@ -20,6 +20,8 @@
 .popup-gracias {
     display: none;
     position: fixed;
+    width: 200px;
+    height: 100px;
     top: 30%;
     left: 50%;
     transform: translate(-50%, -50%);
