--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,6 +30,18 @@ body {
     text-transform: uppercase;
 }
 
+.espacio {
+    width: 100%;
+    height: 50px;
+    background-color: #fff;
+}
+
+.espacio2 {
+    width: 100%;
+    height: 375px;
+    background-color: #fff;
+}
+
 .stamp {
     margin: 20px auto;
     width: 220px;
@@ -44,7 +56,7 @@ body {
 .image {
     width: 325px;
     position: absolute;
-    top: 60%;
+    top: 350px;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -53,7 +65,7 @@ body {
     width: 235px;
     position: absolute;
     opacity: 30%;
-    top: 60%;
+    top: 350px;
     left: 50%;
     transform: translate(-50%, -50%);
 }
