--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,6 +42,12 @@ body {
     background-color: #fff;
 }
 
+.espacio3 {
+    width: 100%;
+    height: 325px;
+    background-color: #fff;
+}
+
 .stamp {
     margin: 20px auto;
     width: 220px;
@@ -70,6 +76,14 @@ body {
     transform: translate(-50%, -50%);
 }
 
+.image3 {
+    width: 275px;
+    position: absolute;
+    top: 325px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .texto {
     font-size: 20px;
     color: #a47333;
@@ -78,6 +92,12 @@ body {
 
 .textoalt {
     font-size: 20px;
+    color: #000;
+    text-transform: uppercase;
+}
+
+.textoalt2 {
+    font-size: 17px;
     color: #000;
     text-transform: uppercase;
 }
